--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@godaddy/terminus": "^4.4.1",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "dbase": "file:my_modules/dbase",
@@ -17,6 +16,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request-ip": "^2.1.3"
   }
 }
